logs/djangodbu.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djangodbu'...
Compiling './lib/python3.5/site-packages/djangodbu/shell.py'...
***   File "./lib/python3.5/site-packages/djangodbu/shell.py", line 299
    print obj.model
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/djangodbu/sql.py'...
***   File "./lib/python3.5/site-packages/djangodbu/sql.py", line 67
    print colorize_sql(format_sql(sqlstring))
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangodbu/terminalsize.py'...
***   File "./lib/python3.5/site-packages/djangodbu/terminalsize.py", line 27
    print "default"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/djangodbu/utils.py'...
***   File "./lib/python3.5/site-packages/djangodbu/utils.py", line 48
    print "{path} {col2}{key}{col0}:{rst} {value}".format(
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangodbu-0.0.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlparse'...
Listing './lib/python3.5/site-packages/sqlparse/engine'...
Listing './lib/python3.5/site-packages/sqlparse/filters'...
Listing './lib/python3.5/site-packages/sqlparse-0.2.4.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
